[package]
name = "sol-sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sol-sim"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.6", features = ["json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }

# Solana dependencies
litesvm = "0.8.1"
solana-sdk = "3.0.0"
solana-client = "3.0.8"
solana-program = "3.0.0"

# Additional dependencies
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
base64 = "0.22.1"
solana-sysvar = "3.0.0"
